<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/translate_the_following_word"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewSourceWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextResultWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/write_your_guess"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:onClick="resetAnswerCounter" />

        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check"
            android:onClick="checkWord" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers_0"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewWrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_answers_0"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp" />
</LinearLayout>